<resources>
    <string name="app_name" translatable="false">CookieVery</string>
    <string name="app_ingresar">Ingresar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="app_registrar">Registrar</string>
    <string name="app_login_usuario">Usuario</string>
    <string name="app_login_password">Contraseña</string>
    <string name="app_formulario_registro">Formulario de registro</string>
    <string name="app_formulario_identificacion">Identificación</string>
    <string name="app_formulario_nombre">Nombre</string>
    <string name="app_formulario_direccion">Dirección</string>
    <string name="app_formulario_telefono">Teléfono</string>
    <string name="app_formulario_correo">Correo</string>
    <string name="app_formulario_guardar">Guardar</string>
    <string name="app_formulario_contrasena">Contraseña</string>
    <string name="app_button_cancelar">Cancelar</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="edit_description">Edit pencil</string>
    <string name="deletePerfil">Eliminar perfil</string>
</resources>
