<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/app_login_password"
        android:autofillHints="@string/app_login_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userLogin" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:text="@string/app_ingresar"
        android:background="@color/orange"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin"
        android:onClick="login"
        />

    <EditText
        android:id="@+id/userLogin"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/app_login_usuario"
        android:inputType="textPersonName"
        android:autofillHints="@string/app_login_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:text="@string/app_registrar"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:onClick="navigateToRegister"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="133dp"
        android:layout_height="130dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_cookievery_logo_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>